# swem

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  publish.yaml  test-main.yml  test.yml
docs/source/: conf.py  index.rst
docs/source/api/: swem.metrics.rst  swem.models.pooling.rst  swem.models.rst  swem.models.swem.rst  swem.models.word_drop_embedding.rst  swem.torch_utils.rst  swem.utils.classes.rst  swem.utils.rst  swem.utils.torch_utils.rst
docs/source/usage/: Demo.ipynb  installation.md
swem/: __init__.py  metrics.py  torch_utils.py
swem/models/: __init__.py  pooling.py  swem.py  word_drop_embedding.py
swem/utils/: __init__.py  classes.py  torch_utils.py
tests/: test_metrics.py  test_torch_utils.py
tests/models/: test_pooling.py  test_swem.py  test_word_drop_embedding.py
tests/utils/: test_classes.py  test_torch_utils.py
